--- a/angular.json
+++ b/angular.json
@@ -142,6 +142,43 @@
           }
         }
       }
+    },
+    "tree": {
+      "projectType": "library",
+      "root": "libs/tree",
+      "sourceRoot": "libs/tree/src",
+      "prefix": "ng-fast-tree",
+      "architect": {
+        "build": {
+          "builder": "@nrwl/angular:package",
+          "options": {
+            "tsConfig": "libs/tree/tsconfig.lib.json",
+            "project": "libs/tree/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "libs/tree/tsconfig.lib.prod.json"
+            }
+          }
+        },
+        "lint": {
+          "builder": "@nrwl/linter:eslint",
+          "options": {
+            "lintFilePatterns": [
+              "libs/tree/src/**/*.ts",
+              "libs/tree/src/**/*.html"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "outputs": ["coverage/libs/tree"],
+          "options": {
+            "jestConfig": "libs/tree/jest.config.js",
+            "passWithNoTests": true
+          }
+        }
+      }
     }
   }
 }
